# AL-JEPA

./: .gitignore  .gitlint  AGENTS.md  CLAUDE.md  README.md  lefthook.yml  pyproject.toml  requirements.txt  skills-lock.json
.claude/skills/dagster/: SKILL.md
mugen/: pyproject.toml
mugen/src/mugen/: __init__.py  __main__.py  train.py
