[project]
name = "songen"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["songen-core", "songen-api"]

[tool.uv.sources]
songen-core = { workspace = true }
songen-api = { workspace = true }
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
exclude-newer = "3 days"

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
exclude-newer = "3 days"

[tool.uv]
preview = true

[tool.uv.workspace]
members = ["packages/core", "packages/api"]

[dependency-groups]
dev = ["gitlint>=0.19.1", "lefthook>=2.1.6", "ruff>=0.15.12", "ty>=0.0.35"]

[tool.ty.environment]
python = ".venv"

[tool.ruff]
indent-width = 4
line-length = 320
include = ["pyproject.toml", "*.py", "*.ipynb"]

[tool.ruff.lint]
extend-select = ["ICN", "I"]
extend-fixable = ["ICN", "I"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
lines-after-imports = 2
force-wrap-aliases = true

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"torchvision.transforms.v2.functional" = "TF"
"torch.nn.functional" = "F"
"numpy.typing" = "npt"
