[project]
name = "songen"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["songen-data", "songen-core", "songen-api"]

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "lefthook>=2.1.6",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.38",
]
notebook = ["matplotlib>=3.10.9", "polars>=1.40.1", "marimo>=0.23.6"]

[tool.uv.workspace]
members = ["packages/data", "packages/core", "packages/api"]

[tool.uv.sources]
songen-api = { workspace = true }
songen-data = { workspace = true }
songen-core = { workspace = true }
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
exclude-newer = "3 days"

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
exclude-newer = "3 days"

[tool.uv]
preview = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ['packages']

[tool.ty.environment]
python = ".venv"

[tool.ruff]
indent-width = 4
line-length = 320
include = ["pyproject.toml", "*.py", "*.ipynb"]

[tool.ruff.lint]
extend-select = ["ICN", "I"]
extend-fixable = ["ICN", "I"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
lines-after-imports = 2
force-wrap-aliases = true

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"torchvision.transforms.v2.functional" = "TF"
"torch.nn.functional" = "F"
"numpy.typing" = "npt"
