[project]
name = "mugen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nostornum", email = "nostornum@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mugen = "mugen:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
